--- a/alla.css
+++ b/alla.css
@@ -1,15 +1,3 @@
-.delikatess {
-
-display: none;
-width: 300px;
-height: auto;
-margin: 20px auto;
-opacity: 0;
-transition: opacity 1s ease-in-out;
-
-}
-
-.delikatess.show {
-    display: block;
-    opacity: 1;
+body {
+    background-image: url(bilder/bakgrund/backgrounden100.png)
 }
