--- a/landingpagestyle.css
+++ b/landingpagestyle.css
@@ -51,6 +51,33 @@
 
 /*     <p id="textlandingpage">Till dig som älskar delikatesser, kaffe och ett leende på läpparna</p>    */
 
+#textlandingpage-container {
+    display: flex;
+    justify-content: center; 
+    align-items: center;     
+    height: 200px;           
+}
+
+
+#textlandingpage {
+    font-size: large;
+    color: #b3b3b3;
+    font-family: 'Times New Roman', Times, serif;
+    margin-top: 100px;
+    text-align: center;
+    
+}   
+
+#slumpknapp {
+    margin-top: 200px;
+    cursor: pointer;
+    background-color: transparent;
+    border: outset;
+    color: aliceblue;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 100;
+}
+
 
 /*     <section id="bilder">    */
 
