--- a/landingpagestyle.css
+++ b/landingpagestyle.css
@@ -30,32 +30,47 @@
 
     display: none;
     width: 300px;
-    height: auto;
-    margin: 20px auto;
+    height: 150px;
+    margin: 0 auto;
     opacity: 0;
     transition: opacity 1s ease-in-out;
     
+    }
+
+
+    .delikatess img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 4px;
     }
     
     .delikatess.show {
         display: block;
         opacity: 1;
+        margin-top: 5%;
+        background-color: #7f1a0aa1;
+        padding: 4px;
+        border-radius: 4px;
     }
 
 
-/*         <img id="bildennummer1" src="bilder/delikatess/kaffe.jpg"> */
 
 
 /*     <main id="mainlandingpage">    */
 
 
-/*     <p id="textlandingpage">Till dig som älskar delikatesser, kaffe och ett leende på läpparna</p>    */
 
 #textlandingpage-container {
     display: flex;
     justify-content: center; 
     align-items: center;     
     height: 200px;           
+}
+
+
+#fetbild {
+    height: 250px;
 }
 
 
@@ -69,13 +84,24 @@
 }   
 
 #slumpknapp {
-    margin-top: 200px;
+    margin-top: 100px;
     cursor: pointer;
     background-color: transparent;
     border: outset;
     color: aliceblue;
     font-family: 'Times New Roman', Times, serif;
     font-weight: 100;
+}
+
+#open {
+
+    font-size: large;
+    color: #b3b3b3;
+    font-family: 'Times New Roman', Times, serif;
+    margin-top: 200px;
+    text-align: left;
+
+
 }
 
 
