--- a/omossstyle.css
+++ b/omossstyle.css
@@ -86,9 +86,31 @@
 }
 
 
-#fetcitat {
+.okminacitat {
 
-    text-align: right;
+    display: block;
+    text-align: center;
+    margin-left: 150px;
+    position: relative;
+    top: -100px;
+    font-style: italic;
+    
 
 }
+
+
+#kanske {
+
+
+        position: absolute;
+        width: 300px; /* Gör bilden mindre (kan justeras efter behov) */
+        height: auto; /* Behåll proportionerna */
+        top: 20px; /* Justera vertikal position */
+        left: 10px; /* Flytta bilden mer till vänster */
+        transform: translateX(0); /* Finjustera om det behövs */
+    
+    
+
+}
+
 
