--- a/produkterstyle.css
+++ b/produkterstyle.css
@@ -36,7 +36,7 @@
 
 #kundvagn {
     font-family: 'Times New Roman', Times, serif;
-    margin-top: 200px;
+    margin-top: 100px;
     padding: 10px;
     background-color: #691d1d;
     color: rgb(253, 253, 253);
@@ -105,4 +105,17 @@
     text-align: center;
     font-size: 16px;
     color: #b3b3b3;
+}
+
+
+
+#varukorg-antal {
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 5px 10px;
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    font-size: 14px;
 }
